--- a/app/customers/customer.component.html
+++ b/app/customers/customer.component.html
@@ -6,11 +6,12 @@
     <div class="panel-body">
         <form class="form-horizontal"
               novalidate autocomplete="off"
-              (ngSubmit)="save(signupForm)"
-              #signupForm="ngForm">
-            <fieldset>
+              (ngSubmit)="save()"
+              [formGroup]= "customerForm">
+              
+                <fieldset>
                 <div class="form-group"
-                    [ngClass]="{'has-error': (firstNameVar.touched || firstNameVar.dirty) && !firstNameVar.valid }">
+                    [ngClass]="{'has-error': (customerForm.controls.firstName.touched || customerForm.controls.firstName.dirty) && !customerForm.controls.firstName.valid }">
                     <label class="col-md-2 control-label" 
                            for="firstNameId">First Name</label>
 
@@ -18,17 +19,13 @@
                         <input class="form-control" 
                                id="firstNameId" 
                                type="text" 
-                               placeholder="First Name (required)" 
-                               required 
-                               minlength="3"
-                               [(ngModel)]=customer.firstName
-                               name="firstName"
-                               #firstNameVar="ngModel" />
-                        <span class="help-block" *ngIf="(firstNameVar.touched || firstNameVar.dirty) && firstNameVar.errors">
-                            <span *ngIf="firstNameVar.errors.required">
+                               placeholder="First Name (required)"                            
+                               formControlName="firstName"/>
+                        <span class="help-block" *ngIf="(customerForm.controls.firstName.touched || customerForm.controls.firstName.dirty) && customerForm.controls.firstName.errors">
+                            <span *ngIf="customerForm.controls.firstName.errors.required">
                                 Please enter your first name.
                             </span>
-                            <span *ngIf="firstNameVar.errors.minlength">
+                            <span *ngIf="customerForm.controls.firstName.errors.minlength">
                                 The first name must be longer than 3 characters.
                             </span>
                         </span>
@@ -36,7 +33,7 @@
                 </div>
 
                 <div class="form-group"
-                    [ngClass]="{'has-error': (lastNameVar.touched || lastNameVar.dirty) && !lastNameVar.valid }">
+                    [ngClass]="{'has-error': (customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && !customerForm.get('lastName').valid }">
                     <label class="col-md-2 control-label" 
                         for="lastNameId">Last Name</label>
 
@@ -45,63 +42,124 @@
                                id="lastNameId" 
                                type="text" 
                                placeholder="Last Name (required)" 
-                               required 
-                               maxlength="50"
-                               [(ngModel)]="customer.lastName"
-                               name="lastName"
-                               #lastNameVar="ngModel" />
-                        <span class="help-block" *ngIf="(lastNameVar.touched || lastNameVar.dirty) && lastNameVar.errors">
-                            <span *ngIf="lastNameVar.errors.required">
+                               formControlName="lastName" />
+                        <span class="help-block" *ngIf="(customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && customerForm.get('lastName').errors">
+                            <span *ngIf="customerForm.get('lastName').errors.required">
                                 Please enter your last name.
                             </span>
                         </span>
                     </div>
                 </div>
 
+                <div formGroupName="emailGroup">
+                    <div class="form-group"
+                        [ngClass]="{'has-error': (customerForm.get('emailGroup.email').touched || customerForm.get('emailGroup.email').dirty) && !customerForm.get('emailGroup.email').valid }">
+                        <label class="col-md-2 control-label" 
+                            for="emailId">Email</label>
+
+                        <div class="col-md-8">
+                            <input class="form-control" 
+                                id="emailId" 
+                                type="email" 
+                                placeholder="Email (required)"  
+                                formControlName="email"/>
+                            <span class="help-block" *ngIf="(customerForm.get('emailGroup.email').touched || customerForm.get('emailGroup.email').dirty) && customerForm.get('emailGroup.email').errors">
+                                <span *ngIf="customerForm.get('emailGroup.email').errors.required">
+                                    Please enter your email address.
+                                </span>
+                                <span *ngIf="customerForm.get('emailGroup.email').errors.pattern">
+                                    Please enter a valid email address.
+                                </span>
+                                <span *ngIf="customerForm.get('emailGroup.email').errors.email">
+                                    Please enter a valid email address.
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+
+                    <div class="form-group"
+                        [ngClass]="{'has-error': (customerForm.get('emailGroup.emailConfirmation').touched || customerForm.get('emailGroup.emailConfirmation').dirty) && 
+                        (!customerForm.get('emailGroup.emailConfirmation').valid || !customerForm.get('emailGroup').valid) }">
+                        <label class="col-md-2 control-label" 
+                            for="emailConfirmationId">Confirm email</label>
+
+                        <div class="col-md-8">
+                            <input class="form-control" 
+                                id="emailConfirmationId" 
+                                type="email" 
+                                placeholder="Confirm Email (required)"  
+                                formControlName="emailConfirmation"/>
+                            <span class="help-block" *ngIf="(customerForm.get('emailGroup.emailConfirmation').touched || customerForm.get('emailGroup.emailConfirmation').dirty) && 
+                            (customerForm.get('emailGroup.emailConfirmation').errors || customerForm.get('emailGroup').errors)">
+                                <span *ngIf="customerForm.get('emailGroup.emailConfirmation').errors?.required">
+                                    Please enter your email address.
+                                </span>
+                               <span *ngIf="customerForm.get('emailGroup').errors?.match">
+                                    Password is not the same.
+                                </span>
+                            </span>
+                        </div>
+                    </div>
+                </div>
+
                 <div class="form-group"
-                    [ngClass]="{'has-error': (emailVar.touched || emailVar.dirty) && !emailVar.valid }">
+                    [ngClass]="{'has-error': (customerForm.get('phone').touched || customerForm.get('phone').dirty) && !customerForm.get('phone').valid }">
                     <label class="col-md-2 control-label" 
-                        for="emailId">Email</label>
+                        for="phoneId">Phone</label>
 
                     <div class="col-md-8">
                         <input class="form-control" 
-                               id="emailId" 
-                               type="email" 
-                               placeholder="Email (required)" 
-                               required
-                               pattern="[a-z0-9._%+-]+@[a-z0-9.-]+"
-                               [(ngModel)]="customer.email"
-                               name="email"
-                               #emailVar="ngModel" />
-                        <span class="help-block" *ngIf="(emailVar.touched || emailVar.dirty) && emailVar.errors">
-                            <span *ngIf="emailVar.errors.required">
-                                Please enter your email address.
-                            </span>
-                            <span *ngIf="emailVar.errors.pattern">
-                                Please enter a valid email address.
-                            </span>
-
-                            <!-- This one does not work -->
-                            <span *ngIf="emailVar.errors.email">
-                                Please enter a valid email address.
+                               id="phoneId" 
+                               type="text" 
+                               placeholder="Phone"  
+                               formControlName="phone"/>
+                        <span class="help-block" *ngIf="(customerForm.get('phone').touched || customerForm.get('phone').dirty) && customerForm.get('phone').errors">
+                            <span *ngIf="customerForm.get('phone').errors.required">
+                                Please enter your phone number.
                             </span>
                         </span>
                     </div>
                 </div>
 
-                <div class="form-group">
-                    <div class="col-md-offset-1 col-md-8 checkbox" >
-                        <label>
-                            <input id="sendCatalogId"
-                                   type="checkbox"
-                                   [(ngModel)]="customer.sendCatalog"
-                                   name="sendCatalog" >
-                            Send me your catalog
+               <div class="form-group">
+                    <label class="col-md-2 control-label">Send Notification</label>
+
+                    <div class="col-md-8">
+                        <label class="radio-inline">
+                            <input type="radio" 
+                                value = "email"
+                                formControlName="notification"
+                                (click)="setNotification('email')"/>Email
+                        </label>
+                        <label class="radio-inline">
+                            <input type="radio"
+                                   value="text"
+                                   formControlName="notification" 
+                                   (click)="setNotification('text')">Phone
                         </label>
                     </div>
                 </div>
+
+                <div class="form-group"
+                    [ngClass]="{'has-error': (customerForm.get('rating').touched || customerForm.get('rating').dirty) && !customerForm.get('rating').valid }">
+                    <label class="col-md-2 control-label" 
+                        for="RatingId">Rating</label>
+
+                    <div class="col-md-8">
+                        <input class="form-control" 
+                               id="RatingId" 
+                               type="number" 
+                               placeholder="Rating"  
+                               formControlName="rating"/>
+                        <span class="help-block" *ngIf="(customerForm.get('rating').touched || customerForm.get('rating').dirty) && customerForm.get('rating').errors">
+                            <span *ngIf="customerForm.get('rating').errors.range">
+                                Please rate your experience from 1 to 10
+                            </span>
+                        </span>
+                    </div>
+                </div>
                 
-                <div *ngIf="customer.sendCatalog">
+                <!--<div *ngIf="customer.sendCatalog">
                     <div class="form-group" >
                         <label class="col-md-2 control-label">Address Type</label>
                         <div class="col-md-8">
@@ -185,14 +243,14 @@
                                    name="zip">
                         </div>
                     </div>
-                </div>
+                </div>-->
 
                 <div class="form-group">
                     <div class="col-md-4 col-md-offset-2">
                         <span>
                             <button class="btn btn-primary"
                                     type="submit"
-                                    [disabled]="!signupForm.valid">
+                                    [disabled]="!customerForm.valid">
                                 Save
                             </button>
                         </span>
@@ -202,7 +260,3 @@
         </form>
     </div>
 </div>
-<br>Dirty: {{ signupForm.dirty }} 
-<br>Touched: {{ signupForm.touched }}
-<br>Valid: {{ signupForm.valid }}
-<br>Value: {{ signupForm.value | json }}
