add reactive validation messages

--- a/app/customers/customer.component.html
+++ b/app/customers/customer.component.html
@@ -11,7 +11,7 @@
               
                 <fieldset>
                 <div class="form-group"
-                    [ngClass]="{'has-error': (customerForm.controls.firstName.touched || customerForm.controls.firstName.dirty) && !customerForm.controls.firstName.valid }">
+                    [ngClass]="{'has-error': firstNameMessage }">
                     <label class="col-md-2 control-label" 
                            for="firstNameId">First Name</label>
 
@@ -21,19 +21,14 @@
                                type="text" 
                                placeholder="First Name (required)"                            
                                formControlName="firstName"/>
-                        <span class="help-block" *ngIf="(customerForm.controls.firstName.touched || customerForm.controls.firstName.dirty) && customerForm.controls.firstName.errors">
-                            <span *ngIf="customerForm.controls.firstName.errors.required">
-                                Please enter your first name.
-                            </span>
-                            <span *ngIf="customerForm.controls.firstName.errors.minlength">
-                                The first name must be longer than 3 characters.
-                            </span>
+                        <span class="help-block" *ngIf="firstNameMessage">
+                            {{firstNameMessage}}
                         </span>
                     </div>
                 </div>
 
                 <div class="form-group"
-                    [ngClass]="{'has-error': (customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && !customerForm.get('lastName').valid }">
+                    [ngClass]="{'has-error': lastNameMessage">
                     <label class="col-md-2 control-label" 
                         for="lastNameId">Last Name</label>
 
@@ -43,17 +38,15 @@
                                type="text" 
                                placeholder="Last Name (required)" 
                                formControlName="lastName" />
-                        <span class="help-block" *ngIf="(customerForm.get('lastName').touched || customerForm.get('lastName').dirty) && customerForm.get('lastName').errors">
-                            <span *ngIf="customerForm.get('lastName').errors.required">
-                                Please enter your last name.
-                            </span>
+                        <span class="help-block" *ngIf="lastNameMessage">
+                            {{lastNameMessage}}
                         </span>
                     </div>
                 </div>
 
                 <div formGroupName="emailGroup">
                     <div class="form-group"
-                        [ngClass]="{'has-error': (customerForm.get('emailGroup.email').touched || customerForm.get('emailGroup.email').dirty) && !customerForm.get('emailGroup.email').valid }">
+                        [ngClass]="{'has-error': emailMessage }">
                         <label class="col-md-2 control-label" 
                             for="emailId">Email</label>
 
@@ -63,16 +56,8 @@
                                 type="email" 
                                 placeholder="Email (required)"  
                                 formControlName="email"/>
-                            <span class="help-block" *ngIf="(customerForm.get('emailGroup.email').touched || customerForm.get('emailGroup.email').dirty) && customerForm.get('emailGroup.email').errors">
-                                <span *ngIf="customerForm.get('emailGroup.email').errors.required">
-                                    Please enter your email address.
-                                </span>
-                                <span *ngIf="customerForm.get('emailGroup.email').errors.pattern">
-                                    Please enter a valid email address.
-                                </span>
-                                <span *ngIf="customerForm.get('emailGroup.email').errors.email">
-                                    Please enter a valid email address.
-                                </span>
+                            <span class="help-block" *ngIf="emailMessage">
+                               {{emailMessage}}
                             </span>
                         </div>
                     </div>
@@ -128,14 +113,12 @@
                         <label class="radio-inline">
                             <input type="radio" 
                                 value = "email"
-                                formControlName="notification"
-                                (click)="setNotification('email')"/>Email
+                                formControlName="notification"/>Email
                         </label>
                         <label class="radio-inline">
                             <input type="radio"
                                    value="text"
-                                   formControlName="notification" 
-                                   (click)="setNotification('text')">Phone
+                                   formControlName="notification"/>Phone
                         </label>
                     </div>
                 </div>
