--- a/app/customers/customer.component.html
+++ b/app/customers/customer.component.html
@@ -28,7 +28,7 @@
                 </div>
 
                 <div class="form-group"
-                    [ngClass]="{'has-error': lastNameMessage">
+                    [ngClass]="{'has-error': lastNameMessage }">
                     <label class="col-md-2 control-label" 
                         for="lastNameId">Last Name</label>
 
@@ -124,7 +124,7 @@
                 </div>
 
                 <div class="form-group"
-                    [ngClass]="{'has-error': (customerForm.get('rating').touched || customerForm.get('rating').dirty) && !customerForm.get('rating').valid }">
+                    [ngClass]="{'has-error': ratingMessage }">
                     <label class="col-md-2 control-label" 
                         for="RatingId">Rating</label>
 
@@ -134,99 +134,117 @@
                                type="number" 
                                placeholder="Rating"  
                                formControlName="rating"/>
-                        <span class="help-block" *ngIf="(customerForm.get('rating').touched || customerForm.get('rating').dirty) && customerForm.get('rating').errors">
-                            <span *ngIf="customerForm.get('rating').errors.range">
-                                Please rate your experience from 1 to 10
-                            </span>
+                        <span class="help-block" *ngIf="ratingMessage">
+                            {{ratingMessage}}
                         </span>
                     </div>
                 </div>
-                
-                <!--<div *ngIf="customer.sendCatalog">
-                    <div class="form-group" >
-                        <label class="col-md-2 control-label">Address Type</label>
-                        <div class="col-md-8">
-                                <label class="radio-inline">
-                                    <input type="radio" id="addressType1Id" value="home"
-                                           [(ngModel)]="customer.addressType"
-                                           name="addressType">Home
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" id="addressType1Id" value="work"
-                                           [(ngModel)]="customer.addressType"
-                                           name="addressType">Work
-                                </label>
-                                <label class="radio-inline">
-                                    <input type="radio" id="addressType1Id" value="other"
-                                           [(ngModel)]="customer.addressType"
-                                           name="addressType">Other
-                                </label>
-                        </div>
-                    </div>
 
-                    <div class="form-group">
-                        <label class="col-md-2 control-label" 
-                            for="street1Id">Street Address 1</label>
-                        <div class="col-md-8">
-                            <input type="text" 
-                                   class="form-control" 
-                                   id="street1Id" 
-                                   placeholder="Street address"
-                                   [(ngModel)]="customer.street1"
-                                   name="street1">
-                        </div>
+                <div class="form-group">
+                    <div class="col-md-offset-1 col-md-8 checkbox" >
+                        <label>
+                            <input  id="sendCatalogId"
+                                    type="checkbox"
+                                    formControlName="sendCatalog"/>
+                                    Send me your catalog
+                        </label>
                     </div>
+                </div>
 
+ 
+                <div *ngIf="customerForm.get('sendCatalog').value">
                     <div class="form-group">
-                        <label class="col-md-2 control-label" 
-                            for="street2Id">Street Address 2</label>
-                        <div class="col-md-8">
-                            <input type="text" 
-                                   class="form-control" 
-                                   id="street2Id"
-                                   placeholder="Street address (second line)"
-                                   [(ngModel)]="customer.street2"
-                                   name="street2">
+                        <div class="col-md-4 col-md-offset-2">
+                            <span>
+                                <button class="btn btn-primary"
+                                    type="button"
+                                    [disabled]="!addressFormArray.valid"
+                                    (click)="addAddress()">
+                                    Add another address
+                                </button>
+                            </span>
                         </div>
                     </div>
+                    <div formArrayName = "addressFormArray" *ngFor="let address of addressFormArray.controls; let i = index">
+                        <div [formGroupName] = "i">
+                            <div class="form-group" >
+                                <label class="col-md-2 control-label">Address Type</label>
+                                <div class="col-md-8">
+                                        <label class="radio-inline">
+                                            <input type="radio" id="addressType1Id" value="home"
+                                                formControlName="addressType">Home
+                                        </label>
+                                        <label class="radio-inline">
+                                            <input type="radio" id="addressType1Id" value="work"
+                                                formControlName="addressType">Work
+                                        </label>
+                                        <label class="radio-inline">
+                                            <input type="radio" id="addressType1Id" value="other"
+                                                formControlName="addressType">Other
+                                        </label>
+                                </div>
+                            </div>
 
-                    <div class="form-group">
-                        <label class="col-md-2 control-label" 
-                            for="cityId">City, State, Zip Code</label>
-                        <div class="col-md-3">
-                            <input type="text" 
-                                   class="form-control" 
-                                   id="cityId" 
-                                   placeholder="City"
-                                   [(ngModel)]="customer.city"
-                                   name="city">
-                        </div>
-                        <div class="col-md-3">
-                            <select class="form-control"
-                                    id="stateId"
-                                    [(ngModel)]="customer.state"
-                                    name="state">
-                                <option value="" disabled selected hidden>Select a State...</option>
-                                <option value="AL">Alabama</option>
-                                <option value="AK">Alaska</option>
-                                <option value="AZ">Arizona</option>
-                                <option value="AR">Arkansas</option>
-                                <option value="CA">California</option>
-                                <option value="CO">Colorado</option>
-                                <option value="WI">Wisconsin</option>
-                                <option value="WY">Wyoming</option>
-                            </select>
-                        </div>
-                        <div class="col-md-2">
-                        <input type="number"
-                                   class="form-control" 
-                                   id="zipId" 
-                                   placeholder="Zip Code"
-                                   [(ngModel)]="customer.zip"
-                                   name="zip">
+                            <div class="form-group">
+                                <label class="col-md-2 control-label" 
+                                    attr.for="{{'street1Id' + i}}">Street Address 1</label>
+                                <div class="col-md-8">
+                                    <input type="text" 
+                                        class="form-control" 
+                                        id="{{'street1Id' + i}}" 
+                                        placeholder="Street address"
+                                        formControlName="street1">
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-md-2 control-label" 
+                                    attr.for="{{'street2Id' + i}}">Street Address 2</label>
+                                <div class="col-md-8">
+                                    <input type="text" 
+                                        class="form-control" 
+                                        id="{{'street2Id' + i}}"
+                                        placeholder="Street address (second line)"
+                                        formControlName="street2">
+                                </div>
+                            </div>
+
+                            <div class="form-group">
+                                <label class="col-md-2 control-label" 
+                                    attr.for="{{'cityId' + i}}">City, State, Zip Code</label>
+                                <div class="col-md-3">
+                                    <input type="text" 
+                                        class="form-control" 
+                                        id="{{'cityId' + i}}" 
+                                        placeholder="City"
+                                        formControlName="city">
+                                </div>
+                                <div class="col-md-3">
+                                    <select class="form-control"
+                                            id="{{'stateId' + i}}"
+                                            formControlName="state">
+                                        <option value="" disabled selected hidden>Select a State...</option>
+                                        <option value="AL">Alabama</option>
+                                        <option value="AK">Alaska</option>
+                                        <option value="AZ">Arizona</option>
+                                        <option value="AR">Arkansas</option>
+                                        <option value="CA">California</option>
+                                        <option value="CO">Colorado</option>
+                                        <option value="WI">Wisconsin</option>
+                                        <option value="WY">Wyoming</option>
+                                    </select>
+                                </div>
+                                <div class="col-md-2">
+                                <input type="number"
+                                        class="form-control" 
+                                        id="{{'zipId' + i}}" 
+                                        placeholder="Zip Code"
+                                        formControlName="zip">
+                                </div>
+                            </div>
                         </div>
                     </div>
-                </div>-->
+                </div>
 
                 <div class="form-group">
                     <div class="col-md-4 col-md-offset-2">
